--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VOLTURK - Türkiye Elektrikli Araç Şarj Ağı Fiyatları</title>
+    <meta name="author" content="Murat Aktan">
+    <title>Volturk - Türkiye Elektrikli Araç Şarj Ağı Fiyatları</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -361,7 +362,8 @@
 
             <div class="update-info">
                 <p class="update-text">
-                    Son güncelleme: Mayıs 2025 • Burada gösterilen fiyatlar bilgilendirme amaçlıdır ve değişkenlik gösterebilir. Güncel fiyatlar için ilgili şarj ağının resmi sitesini kontrol ediniz.
+                    Son güncelleme: Mayıs 2025 • Burada gösterilen fiyatlar bilgilendirme amaçlıdır. Güncel fiyatlar için ilgili şarj ağının resmi sitesini kontrol ediniz.
+                    <br>Bu proje açık kaynak kodludur, <a href="https://github.com/murat-aktan/Volturk" target="_blank">GitHub üzerinden</a> katkıda bulunabilirsiniz.
                 </p>
             </div>
         </div>
