add site verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Murat Aktan">
+    <meta name="google-site-verification" content="LAmBxpPu3y6ZUy7CJJR7vRVM8SURXSkxNpOAqdy9L08" />
     <title>Volturk - Türkiye Elektrikli Araç Şarj Ağı Fiyatları</title>
     <link rel="stylesheet" href="styles.css">
 </head>
