add 5sarj to networks

--- a/index.html
+++ b/index.html
@@ -353,6 +353,21 @@
                                     </div>
                                 </td>
                             </tr>
+                            <tr>
+                                <td>
+                                    <a href="https://5sarj.com/tr/pricing" target="_blank" class="network-link">
+                                        <img class="network-logo" src="images/5-sarj-logo.svg" alt="ZES Logo">
+                                        <span class="network-name">5şarj</span>
+                                    </a>
+                                </td>
+                                <td class="price">₺8.99</td>
+                                <td>
+                                    <div class="price-container">
+                                        <div class="price-item"><strong>₺10.99</strong> (<180kW)</div>
+                                        <div class="price-item"><strong>₺13.99</strong> (180kW+)</div>
+                                    </div>
+                                </td>
+                            </tr>
                         </tbody>
                     </table>
                     <div class="no-results" id="noResults" style="display: none;">
