mobile ux improvements

--- a/index.html
+++ b/index.html
@@ -39,9 +39,21 @@
                     <table id="pricingTable">
                         <thead>
                             <tr>
-                                <th onclick="sortTable(0)">Şarj Ağı <span class="sort-icon">↕</span></th>
-                                <th onclick="sortTable(1)">AC Şarj <span class="sort-icon">↕</span></th>
-                                <th onclick="sortTable(2)">DC Şarj <span class="sort-icon">↕</span></th>
+                                <th onclick="sortTable(0)">Şarj Ağı <span class="sort-icon">
+                                    <svg viewBox="0 0 24 24">
+                                        <path d="M7 10l5-5 5 5H7zM7 14l5 5 5-5H7z"/>
+                                    </svg>
+                                </span></th>
+                                <th onclick="sortTable(1)">AC Şarj <span class="sort-icon">
+                                    <svg viewBox="0 0 24 24">
+                                        <path d="M7 10l5-5 5 5H7zM7 14l5 5 5-5H7z"/>
+                                    </svg>
+                                </span></th>
+                                <th onclick="sortTable(2)">DC Şarj <span class="sort-icon">
+                                    <svg viewBox="0 0 24 24">
+                                        <path d="M7 10l5-5 5 5H7zM7 14l5 5 5-5H7z"/>
+                                    </svg>
+                                </span></th>
                             </tr>
                         </thead>
                         <tbody>
@@ -277,7 +289,7 @@
                                 <td>
                                     <a href="https://www.tesla.com/tr_tr/findus" target="_blank" class="network-link">
                                         <img class="network-logo" src="images/tesla_logo.svg" alt="Tesla Logo">
-                                        <span class="network-name">Tesla Supercharger</span>
+                                        <span class="network-name">Tesla</span>
                                     </a>
                                 </td>
                                 <td class="price">-</td>
